prevent footer jumping by removing kt.lib.footer javascript references and adding fixed position CSS to the footer

--- a/resources/css/newui/view_doc.css
+++ b/resources/css/newui/view_doc.css
@@ -40,7 +40,7 @@
 }
 #sidebar_item {
 	border-bottom: 1px solid #ccc;
-	width: 215px;
+	width: 213px;
 }
 #sidebar_item:last-child {
 	border-bottom: none;
